--- a/themes/lasagna2/layouts/_default/baseof.html
+++ b/themes/lasagna2/layouts/_default/baseof.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     {{- partial "head.html" . -}}
-    <body>
-		 <div class="max-w-{1400px}">
+    <body style="max-width: 800px; margin: auto;">
+		 <div>
         {{- partial "header.html" . -}}
 
 
-	<div class="grid grid-cols-12 gap-8 mx-4 lg:mx-8 mt-10">
-			<div class="col-span-12 lg:col-span-8">
+	<div>
+			<div>
 					 {{- block "main" . }}{{- end }}
 			</div>
 
