new header image lol

--- a/themes/lasagna2/layouts/partials/header.html
+++ b/themes/lasagna2/layouts/partials/header.html
@@ -1,8 +1,7 @@
 {{ $currentPage := . }}
 
 <div class="py-6 pl-4 lg:pl-8 mb-5">
-<a href="/" class="text-5xl block mb-6">{{ .Site.Title }} </a>
-<span class="text-xl"> {{ .Site.Params.siteDescription }} </span>
+<img src="letthatsinkout.png">
 </div>
 
 <nav class="flex flex-row gap-8 pl-4 lg:pl-8">
